fixed the footers on all the pages and realign the article on the news.html

--- a/css/articles.css
+++ b/css/articles.css
@@ -18,6 +18,11 @@
     text-decoration: none;
     color: white;
     font-size: 1.5rem;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     /* position: relative; */
 }
 
@@ -33,6 +38,7 @@
 
 .article {
     margin-bottom: 15px;
+    height: 90px;
     display: flex;
     flex-direction: column;
     position: relative;
@@ -40,10 +46,12 @@
     justify-content: center;
     align-items: center;
     padding-top: 10px;
+    border-top-left-radius: 12px;
+    border-bottom-left-radius: 12px;
 }
 
 .article:hover {
-    box-shadow: 5px 4px 5px 0px;
+    box-shadow: 5px 4px 5px 0px white;
 }
 
 .article-show-container {
@@ -54,7 +62,7 @@
 
 .show {
     color: white;
-    padding-left: 100px;
+    padding: 50px 0;
     font-size: 1.5rem;
 }
 
