--- a/css/main.css
+++ b/css/main.css
@@ -193,11 +193,15 @@ nav li a:hover {
 }
 
 footer {
-  position: fixed;
+  /* position: fixed; */
   bottom: 0;
   text-align: center;
   background: #20272E;
   width: 100%;
+  height: 5em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 footer p {
